SERVER-31860 setFCV on config server should load shards directly from config.shards